--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <body>
     <main>
         <div class="passo ativo" id="passo-0">
-            <img src="https://cdna.artstation.com/p/assets/images/images/035/082/619/large/dan-mccabe-concept-city-design-2021-final.jpg?1613994324" alt="Capa da aventura - Uma cidade grande vista de cima, em estilo de desenho.">
+            <img src="img/skyline-sao-paulo-brazil.jpg">
             <p>Um dia desses, enquanto vasculhava livros empoeirados na biblioteca da escola, me deparei com uma carta antiga dentro de um deles. Ela falava sobre um <b>Distrito Secreto</b>, escondido sob as ruas de concreto e aço de uma metrópole. A carta, escrita por alguém que parecia ter estado lá, deixava pistas enigmáticas. Decidi que essa seria a minha aventura!</p>
             <p>Sua jornada começa... Escolha qual metrópole brasileira esconde o Distrito Secreto:</p>
             <button class="btn-proximo" data-proximo="1">São Paulo</button>
