--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </div>
 
         <div class="passo" id="passo-1">
-            <img src="https://img.freepik.com/vetores-gratis/ilustracao-de-arranha-ceus-da-cidade_23-2149487779.jpg?w=740&t=st=1700438183~exp=1700438783~hmac=50b526d1a9e88d01b17a1b025757d54407b46d75c9428c0352ff2076046e7f22" alt="Panorama urbano de São Paulo, estilo desenho.">
+            <img src="img/recife-praia-boa-viagem.jpg">
             <p>Você decide começar sua jornada em <b>São Paulo</b>. A primeira pista aponta para um dos pontos mais altos da cidade, um observatório com uma vista panorâmica.</p>
             <button class="btn-proximo" data-proximo="4">Procurar a pista no topo do observatório</button>
             <button class="btn-proximo" data-proximo="5">Desistir e voltar para casa</button>
