--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         </div>
 
         <div class="passo" id="passo-4">
-            <img src="https://img.freepik.com/vetores-gratis/ilustracao-de-arranha-ceus-da-cidade_23-2149487779.jpg?w=740&t=st=1700438183~exp=1700438783~hmac=50b526d1a9e88d01b17a1b025757d54407b46d75c9428c0352ff2076046e7f22" alt="Observatório moderno em uma cidade grande, estilo desenho.">
+            <img src="img/download.jpg" alt="Observatório moderno em uma cidade grande, estilo desenho.">
             <p>No topo do observatório em São Paulo, entre a névoa da cidade e o brilho dos letreiros, você encontra uma gravura antiga em uma das janelas, indicando que a próxima pista está na <b>zona portuária do Rio de Janeiro</b>.</p>
             <button class="btn-proximo" data-proximo="10">Seguir para o Rio de Janeiro</button>
         </div>
